<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FMFMainScreen" >

    <TextView style="@style/SmallButtonFont" 
        android:id="@+id/statusLabel" 
        android:layout_height="25dp" 
        android:layout_marginTop="20dip" 
        android:layout_width="fill_parent"        
        android:text="" 
        android:layout_alignParentLeft="true">
    </TextView>
        
    <fragment
        class="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dip"        
        android:layout_marginRight="5dip" 
        android:layout_marginBottom="75dp" 
        
        android:layout_below="@id/statusLabel">        
    </fragment>
  
    <Button style="@style/SmallButtonFont"
        android:id="@+id/findButton"
        android:layout_width="73dp" 
        android:layout_height="73dp" 
        android:layout_alignParentLeft="true"                
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dip"               
         
        android:layout_marginBottom="5dip" 
        android:layout_alignParentBottom="true"
     
        android:background="@drawable/btn_blue"        
        android:text="@string/C_Find"/>
        
    <Button style="@style/SmallButtonFont"
        android:id="@+id/usersButton"
        android:layout_width="73dp" 
        android:layout_height="73dp" 
      
        android:layout_marginLeft="5dip"        
        android:text="@string/C_Users" 

        android:layout_marginBottom="5dip" 
        android:layout_alignParentBottom="true"

        android:background="@drawable/btn_green"          
        android:layout_toRightOf="@id/findButton"/>       
        
    <Button style="@style/SmallButtonFont"
        android:id="@+id/mapModeButton"
        android:layout_width="73dp"
        android:layout_height="73dp"
       
        android:layout_marginLeft="5dip"   
            
        android:layout_marginBottom="5dip" 
        android:layout_alignParentBottom="true"

        android:layout_toRightOf="@id/usersButton"
        android:background="@drawable/btn_yellow"         
        android:text="@string/C_MapMode" /> 
        
    <Button style="@style/SmallButtonFont"
        android:id="@+id/setupButton"
        android:layout_width="73dp"
        android:layout_height="73dp"
    
        android:layout_marginLeft="5dip"        
        android:layout_marginBottom="5dip" 
        android:layout_alignParentBottom="true"

        android:layout_toRightOf="@id/mapModeButton"
        android:background="@drawable/btn_purple"         
        android:text="@string/C_Advanced" /> 

</RelativeLayout>
